[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/main/Game.gd" type="Script" id=1]
[ext_resource path="res://src/party/Party.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/map/LocalMap.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/interface/gui/GUI.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/shaders/TransitionColor.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/interface/game_over/GameOverInterface.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/audio/bgm/battle_theme.ogg" type="AudioStream" id=7]
[ext_resource path="res://src/main/MusicPlayer.gd" type="Script" id=8]
[ext_resource path="res://src/interface/debug/DebugInterface.tscn" type="PackedScene" id=9]

[node name="Game" type="Node"]
script = ExtResource( 1 )

[node name="Party" parent="." instance=ExtResource( 2 )]
position = Vector2( 29, 11 )

[node name="LocalMap" parent="." instance=ExtResource( 3 )]

[node name="EncounterPawn" parent="LocalMap/GameBoard/Pawns" index="0"]
facing = {
"down": false,
"left": false,
"right": false,
"up": false
}

[node name="DialoguePawn" parent="LocalMap/GameBoard/Pawns" index="1"]
facing = {
"down": false,
"left": false,
"right": false,
"up": false
}

[node name="DialogueCombatPawn" parent="LocalMap/GameBoard/Pawns" index="2"]
facing = {
"down": true,
"left": true,
"right": true,
"up": true
}

[node name="Menu" parent="LocalMap" index="3"]
offset = Vector2( 800, 200 )
transform = Transform2D( 1, 0, 0, 1, 800, 200 )

[node name="GUI" parent="." instance=ExtResource( 4 )]

[node name="Container" parent="GUI" index="0"]
margin_left = 595.56
margin_top = 1042.0
margin_right = -600.6
margin_bottom = -900.92

[node name="QuestButton" parent="GUI/Container" index="0"]
margin_left = -263.0
margin_top = -275.0
margin_right = -135.0
margin_bottom = -147.0

[node name="QuestJournal" parent="GUI/Container" index="1"]
margin_left = -655.0
margin_top = -319.0
margin_right = 625.0
margin_bottom = 313.0

[node name="Overlays" type="CanvasLayer" parent="."]

[node name="TransitionColor" parent="Overlays" instance=ExtResource( 5 )]
pause_mode = 2
anchor_left = -0.83
anchor_top = -0.822
anchor_right = 1.071
anchor_bottom = 1.864
margin_left = 241.6
margin_top = -4.23999
margin_right = 241.679
margin_bottom = -4.12
mouse_filter = 2

[node name="GameOverInterface" parent="." instance=ExtResource( 6 )]
layer = 0

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
script = ExtResource( 8 )

[node name="Debug" type="CanvasLayer" parent="."]
layer = 100

[node name="DebugInterface" parent="Debug" instance=ExtResource( 9 )]
visible = false

[editable path="LocalMap"]
[editable path="LocalMap/GameBoard/Pawns/EncounterPawn"]
[editable path="LocalMap/GameBoard/Pawns/DialoguePawn"]
[editable path="LocalMap/GameBoard/Pawns/DialogueCombatPawn"]
[editable path="GUI"]
